# 2026-financial-offer-ranking-ml-poc

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  HOW_TO_RUN.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: build_image.yml  ci.yml  drift_check.yml  release.yml  retrain.yml
artifacts/: README.md
configs/: app.yaml  model.yaml  monitoring.yaml
data/: README.md
notebooks/: README.md  demo_build_and_evaluate.ipynb
scripts/: demo_flow.sh  download_data.py  run_local.sh  smoke_test.sh
src/: __init__.py
src/app/: __init__.py  streamlit_app.py  ui_components.py
src/governance/: __init__.py  audit.py  model_card.py
src/monitoring/: __init__.py  data_quality.py  drift.py  report.py
src/pipelines/: __init__.py  evaluate.py  features.py  ingest.py  package_model.py  train.py
src/serving/: __init__.py  predict.py  schema.py
src/utils/: __init__.py  config.py  logging.py  paths.py
tests/: test_drift.py  test_features.py  test_predict.py
